log/build_2025-02-17_20-23-03/solar_panel_detector/stdout_stderr.log
running develop
Removing /home/pride/AGV/install/solar_panel_detector/lib/python3.10/site-packages/solar-panel-detector.egg-link (link to .)
running egg_info
writing ../../build/solar_panel_detector/solar_panel_detector.egg-info/PKG-INFO
writing dependency_links to ../../build/solar_panel_detector/solar_panel_detector.egg-info/dependency_links.txt
writing entry points to ../../build/solar_panel_detector/solar_panel_detector.egg-info/entry_points.txt
writing requirements to ../../build/solar_panel_detector/solar_panel_detector.egg-info/requires.txt
writing top-level names to ../../build/solar_panel_detector/solar_panel_detector.egg-info/top_level.txt
reading manifest file '../../build/solar_panel_detector/solar_panel_detector.egg-info/SOURCES.txt'
writing manifest file '../../build/solar_panel_detector/solar_panel_detector.egg-info/SOURCES.txt'
running build
running build_py
running install
running install_lib
copying /home/pride/AGV/build/solar_panel_detector/build/lib/solar_panel_detector/__init__.py -> /home/pride/AGV/install/solar_panel_detector/lib/python3.10/site-packages/solar_panel_detector
copying /home/pride/AGV/build/solar_panel_detector/build/lib/solar_panel_detector/detector.py -> /home/pride/AGV/install/solar_panel_detector/lib/python3.10/site-packages/solar_panel_detector
byte-compiling /home/pride/AGV/install/solar_panel_detector/lib/python3.10/site-packages/solar_panel_detector/__init__.py to __init__.cpython-310.pyc
byte-compiling /home/pride/AGV/install/solar_panel_detector/lib/python3.10/site-packages/solar_panel_detector/detector.py to detector.cpython-310.pyc
  File "/home/pride/AGV/install/solar_panel_detector/lib/python3.10/site-packages/solar_panel_detector/detector.py", line 18
    self.declare_parameter('model_path', '\\wsl.localhost\Ubuntu-22.04\home\pride\AGV\src\solar_panel_detector\yolov8m.pt')  # <-- Update this path
                                                                                                                          ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 15-17: truncated \UXXXXXXXX escape

running install_data
copying resource/solar_panel_detector -> /home/pride/AGV/install/solar_panel_detector/share/ament_index/resource_index/packages
copying package.xml -> /home/pride/AGV/install/solar_panel_detector/share/solar_panel_detector
running install_egg_info
Copying ../../build/solar_panel_detector/solar_panel_detector.egg-info to /home/pride/AGV/install/solar_panel_detector/lib/python3.10/site-packages/solar_panel_detector-0.0.0-py3.10.egg-info
running install_scripts
Installing detector script to /home/pride/AGV/install/solar_panel_detector/lib/solar_panel_detector
writing list of installed files to '/home/pride/AGV/build/solar_panel_detector/install.log'
